kubernetes/manifests/eks-dr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    team: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  labels:
    team: platform
